# GRPO_implementation

./: .gitignore  README.md  build_driver_notebook.py  git_process_rewards.py  grpo_implementation.ipynb  grpo_implementation.py  grpo_rlvr_dapo_code.ipynb  grpo_rlvr_dapo_inline_v1.ipynb  infrastructure_mock.py  pyproject.toml  requirements.txt  train_grpo.py
code_rl_env/: __init__.py  environment.py  episode.py  rubric.py  sandbox.py  tasks.py  verifier.py
grpo_rft_code/: README.md  requirements.txt
grpo_rft_code/configs/: grpo_baseline.yaml  microcoder_grpo.yaml
grpo_rft_code/scripts/: eval.sh  train.sh
grpo_rft_code/src/: callbacks.py  data.py  eval.py  rewards.py  train.py
tests/: test_environment.py  test_verifier.py
